Stop again fandom from making content jump all over the place

--- a/fandom/fandom.css
+++ b/fandom/fandom.css
@@ -1,7 +1,9 @@
-div.top-ads-container, .top-ads-container, #mixed-content-footer, .wds-global-footer, #WikiaBar, .page__right-rail, .side-bt-container, .notifications-placeholder, .page-footer, .bottom-ads-container, .gpt-ad, .ad-slot-placeholder, .incontent-leaderboard {
+div.top-ads-container, .top-ads-container, #mixed-content-footer, .wds-global-footer, #WikiaBar, .page__right-rail, .side-bt-container, .notifications-placeholder, .page-footer, .bottom-ads-container, .gpt-ad, .ad-slot-placeholder, .incontent-leaderboard, .ad-slot-placeholder.incontent-leaderboard.is-loading, .global-registration-buttons {
   display : none !important;
   visibility : hidden !important;
   height : 0px !important;
+  min-height : 0px !important;
+  max-height : 0px !important;
   padding-top : 0px !important;
   padding-bottom : 0px !important;
 }
